--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://studying.solutions/",
   "dependencies": {
+    "classnames": "^2.2.6",
     "firebase": "^5.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.6.3",
