Work to correct prod.

--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://studying.solutions",
+  "homepage": "https://studying.solutions/",
   "dependencies": {
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "firebase": "^8.9.1",
     "materialize-css": "^1.0.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-materialize": "^3.9.9",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.4",
     "react-redux-firebase": "^3.10.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
-    "redux-auth-wrapper": "^2.0.3",
+    "redux-auth-wrapper": "^3.0.0",
     "redux-firestore": "^0.15.0",
     "redux-form": "^8.3.7"
   },
